Fix and finished preview messages
It was not showing the last message. Added the read tick when it
corresponds. Also, added date for the message.

--- a/src/components/PreviewMessages.module.css
+++ b/src/components/PreviewMessages.module.css
@@ -35,6 +35,10 @@ button.container>div {
   color: #73b9f5;
 }
 
+.otherWithinGroup {
+  color: lightcoral;
+}
+
 .selected {
   background-color: #2b5278;
 }
